# Rust-oj

./: .gitignore  README.md  index.html  installer.iss  package-lock.json  package.json  tech.md  vite.config.ts  实践报告.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: chat.rs  mod.rs
src-tauri/src/auth/: email_verify.rs  mod.rs
src-tauri/src/cache/: class_cache.rs  common.rs  contest_cache.rs  mod.rs  problem_cache.rs
src-tauri/src/config/: mod.rs  paths.rs  state.rs
src-tauri/src/favorite/: mod.rs  repository.rs
src-tauri/src/network/: mod.rs  openjudge.rs
src-tauri/src/parser/: class.rs  contest.rs  group.rs  login.rs  mod.rs  problem.rs  result.rs  submit.rs
src-tauri/src/state/: mod.rs  reminder.rs
src-tauri/src/storage/: login_cache.rs  mod.rs  paths.rs  stats.rs
src/ui/: app.ts  dom.ts  legacy_app.js  router.ts
src/ui/pages/: aiconfig.ts  class.ts  contest.ts  favorite.ts  home.ts  login.ts  problem.ts  problem.ts.bak  storage.ts  types.ts
